--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://192.168.10.144:3306/subway
+spring.datasource.url=jdbc:mysql://192.168.10.144:3306/subway?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=masterpw
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
